--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-grow: 1;
 }
 
 form {
@@ -205,7 +206,7 @@ input[type=submit]:hover {
     margin: 15px;
     cursor: pointer;
     font-size: 1rem;
-    border-radius: 2rem; 
+    border-radius: 2rem;
 }
 
 .trash-btn {
@@ -215,11 +216,11 @@ input[type=submit]:hover {
     color: white;
     border: none;
     padding: 1rem;
-    margin: auto;
     text-align: center;
     cursor: pointer;
     font-size: 1rem;
-    border-radius: 2rem;    
+    border-radius: 2rem;
+    margin-top: auto; 
 }
 
 /* The switch - the box around the slider */
