--- a/styles.css
+++ b/styles.css
@@ -209,7 +209,35 @@ input[type=submit]:hover {
     border-radius: 2rem;
 }
 
+.example-read {
+    width: 100%;
+    text-align: center;
+    background: #00865a;
+    opacity: 75%;
+    color: white;
+    border: none;
+    padding: 1rem;
+    margin: 15px;
+    cursor: pointer;
+    font-size: 1rem;
+    border-radius: 2rem; 
+}
+
 .trash-btn {
+    width: 100%;
+    background: #426696;
+    opacity: 75%;
+    color: white;
+    border: none;
+    padding: 1rem;
+    text-align: center;
+    cursor: pointer;
+    font-size: 1rem;
+    border-radius: 2rem;
+    margin-top: auto; 
+}
+
+.example-trash {
     width: 100%;
     background: #426696;
     opacity: 75%;
